--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
   <title>Chat App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="ios.css" />
-  <script src="/socket.io/socket.io.js"></script>
+  <script defer src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
       </form>
     </div>
   </main>
-  <script src="main.js"></script>
+  <script defer src="main.js"></script>
 </body>
 
 </html>
